src/objects/MUSW__Binder__c.object
<CustomObject>
    <description>Special activity type relating to many items having a common creation and due date. Items are tracked together. Examples: Citation of violations, submittal of documents, or milestone of applications.</description>
    <fields>
        <fullName>MUSW__Closed_Date__c</fullName>
        <description>Date the case was closed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Comments__c</fullName>
        <description>User comments about the case.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Complaint for the case, if applicable. This is optional.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipLabel>Binders</relationshipLabel>
        <relationshipName>Binders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <description>Date a response or closure for an adjudication case is due before it gets escalated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date to complete or respond by...</inlineHelpText>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Open_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date the adjudication case was opened. This is usually after a series of unresolved violations on a complaint case.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>The current phase of the adjudication case.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Tracking_Number__c</fullName>
        <description>Unique identifier for an adjudication case or docket.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Case Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>The classification of the adjudication case.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notice</fullName>
                </value>
                <value>
                    <fullName>Citation</fullName>
                    <default>true</default>
                    <label>Citation</label>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Petition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Binder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Binder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>